maqueta fichas + sidebar foto align fix & haand cursor.

--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -94,6 +94,9 @@ $topnav-background-color: #222;
     .align-center {
         margin: 0 auto;
     }
+    .profile-photo {
+        border: 3px solid #333;
+    }
 }
 .nested-menu {
     .list-group-item {
